14_bug_fixes fixing home page url and landing page, and css on header to remove extra spaces

--- a/starter-template.less
+++ b/starter-template.less
@@ -49,7 +49,7 @@ body {
 .navbar {
 	background: #0066cc;
 	min-height: 30px;
-	padding: 5px 5px 5px 5px;
+	padding: 5px 10px 5px 10px;
 }
 
 .container {
@@ -89,13 +89,15 @@ body {
 }
 
 .navbar-default .navbar-nav>li> a {
-  padding-top:5px !important; padding-bottom:0 !important;
+  margin-top: 5px;
+  padding-top:0px !important; padding-bottom:0px !important;
+  margin-bottom: -5px;
   height: 30px;
   font-family: "Didact Gothic", Helvetica, sans-serif;
-  font-size: 22px;
+  font-size: 25px;
 	color: #ffffff;
 	background: #0066cc;
-	line-height: 20px;
+	line-height: 25px;
 }
 
 .navbar-default .navbar-nav>.active> a,
@@ -103,11 +105,12 @@ body {
 .navbar-default .navbar-nav>.active> a:hover,
 .navbar-default .navbar-nav>li> a:hover,
 .navbar-default .navbar-nav>li> a:focus, {
+  //padding-top:0px !important; padding-bottom:0px !important;
   text-decoration: underline;
-	color: #eeeeee;
-	font-size: 22px;
+  //border-bottom: 1px solid #fff;
+	color: #ffffff;
 	background: #0066cc;
-
+  //line-height: 25px;
 }
 
 
